--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -3,6 +3,7 @@ header {
   top: 0;
   width: 100%;
   background-color: $header-background;
+  z-index: 999;
 }
 
 nav {
@@ -11,7 +12,8 @@ nav {
   justify-content: center;
   align-items: flex-end;
   color: white;
-  z-index: 2;
+  top: 0;
+  z-index: 100;
   i {
     font-size: 6em;
   }
